# Lem-in

./: .gitignore  CMakeLists.txt  Makefile  author  ft_check_comment.c  ft_check_format_one.c  lem_in  lem_in.h  main.c  rem  test  visu
Libft/: ft_get_file.c  ft_strncmp.c  get_next_line.c
Libft/includes/: get_next_line.c  libft.h
ft_printf/: Makefile  buf_right_alignment.c  buffer.c  buffer_2.c  count_numbers.c  create_after_percent.c  create_until_percent.c  ft_atoi.c  ft_atoi_precision.c  ft_atoi_width.c  ft_bzero.c  ft_char.c  ft_color_print.c  ft_create_char.c  ft_create_str.c  ft_float.c  ft_free_both.c  ft_get_all.c  ft_hex.c  ft_includes.h  ft_int.c  ft_long_composition.c  ft_long_composition_dot.c  ft_long_division.c  ft_long_double.c  ft_long_long.c  ft_long_sum_dot.c  ft_make_precision.c  ft_memcpy.c  ft_memmove.c  ft_octal.c  ft_one.c  ft_percent.c  ft_point.c  ft_pointer.c  ft_printf.c  ft_printf.h  ft_strcat.c  ft_strdup.c  ft_strjoin.c  (+20 more)
ft_printf/a.out.dSYM/Contents/Resources/DWARF/: a.out
get_next_line/: author  get_next_line.c  get_next_line.h
get_next_line/libft/: Makefile  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  (+16 more)
get_next_line/libft/Includes/: libft.h
includes/: .lem_in.h.swp  lem_in.h
lem_view/: Makefile  count_num.c  create_graph_visu.c  create_help.c  draw_line.c  draw_line_and_name.c  free_chains.c  ft_check_adjacency.c  ft_check_comment.c  ft_copy_name.c  ft_exit_adjacency.c  ft_exit_checking.c  ft_make_adjacency.c  ft_make_op.c  ft_visu_validate.c  help_visu.c  init_visu.c  main_visu.c  parse_commands.c  perfom_operation.c
lem_view/Libft/: ft_atoi.c  ft_memcpy.c
lem_view/includes/: lem_in.h  visu.h
maps/: dsa.map  map2  map4000.txt  map5  test  test1  test3  test4  test6  test7  test9
srcs/: .dsa.map.swp  .ft_validate.c.swp  algorithm.c  arg.c  bfs.c  building_connections.c  check_first_line.c  clean_excess.c  count_num.c  create_graph.c  create_help.c  create_map.c  dijkstra_prove.c  disflagger.c  down_is.c  dsa.map  errors.c  excess_filler.c  first_bfs.c  free_chain.c  free_chains.c  ft_check_adjacency.c  ft_check_comment.c  ft_check_format_one.c  ft_check_format_two.c  ft_check_num.c  ft_copy_name.c  ft_delete_map.c  ft_exit_adjacency.c  ft_exit_checking.c  ft_make_adjacency.c  ft_validate.c  get_num_path.c  go_down.c  insert_in_sorted.c  list_copy.c  main.c  map2  no_ways.c  one_to_one.c  (+16 more)
