cmake_minimum_required(VERSION 3.14)
project(lem_in_team C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(Libft/includes)

add_executable(lem_in_team
        includes/lem_in.h
        Libft/includes/libft.h
        Libft/ft_atoi.c
        Libft/ft_atoi_llu.c
        Libft/ft_bits_copy.c
        Libft/ft_bits_filler.c
        Libft/ft_bits_listing.c
        Libft/ft_bits_print.c
        Libft/ft_bits_read_bit.c
        Libft/ft_bits_reverse_bits_in_byte.c
        Libft/ft_bits_reverse_bits_in_bytes.c
        Libft/ft_bits_reverse_memory.c
        Libft/ft_bits_shift.c
        Libft/ft_bits_shift_left.c
        Libft/ft_bits_shift_right.c
        Libft/ft_bits_write_bit.c
        Libft/ft_bzero.c
        Libft/ft_free.c
        Libft/ft_free_and_return.c
        Libft/ft_free_both.c
        Libft/ft_free_two_dimensional_array.c
        Libft/ft_get_all_files.c
        Libft/ft_get_all_files_free.c
        Libft/ft_get_arguments_command_line.c
        Libft/ft_get_file.c
        Libft/ft_isalnum.c
        Libft/ft_isalpha.c
        Libft/ft_isascii.c
        Libft/ft_isdigit.c
        Libft/ft_isprint.c
        Libft/ft_issign.c
        Libft/ft_issorted.c
        Libft/ft_isspace.c
        Libft/ft_itoa.c
        Libft/ft_itoa_double.c
        Libft/ft_itoa_float.c
        Libft/ft_itoa_llu.c
        Libft/ft_itoa_long.c
        Libft/ft_itoa_long_double_old.c
        Libft/ft_itoa_long_double_wrapper.c
        Libft/ft_itoa_long_long.c
        Libft/ft_jump.c
        Libft/ft_jump_pointer_to_n.c
        Libft/ft_letter_replacement.c
        Libft/ft_lst_all_content_size.c
        Libft/ft_lst_chain_len.c
        Libft/ft_lst_copy_chain.c
        Libft/ft_lst_cut.c
        Libft/ft_lst_cut_numbers.c
        Libft/ft_lst_deduplication.c
        Libft/ft_lst_free_chain.c
        Libft/ft_lst_get_end.c
        Libft/ft_lst_join.c
        Libft/ft_lst_monolith_convert_to_monolith.c
        Libft/ft_lst_monolith_from_array.c
        Libft/ft_lst_monolith_its_monolith.c
        Libft/ft_lst_monolith_join_chains.c
        Libft/ft_lst_monolith_lstnew.c
        Libft/ft_lst_monolith_sort_quick.c
        Libft/ft_lst_putstr_free.c
        Libft/ft_lst_putstr_free_cs.c
        Libft/ft_lst_putstr_sep.c
        Libft/ft_lst_putstr_sep_free.c
        Libft/ft_lst_sort_quick.c
        Libft/ft_lst_stack_empty_stack_num.c
        Libft/ft_lst_stack_empty_stack_num_tightly.c
        Libft/ft_lst_stack_is_empty.c
        Libft/ft_lst_stack_keep_stacks.c
        Libft/ft_lst_stack_new_stack.c
        Libft/ft_lst_stack_pop.c
        Libft/ft_lst_stack_push.c
        Libft/ft_lst_stack_push_back.c
        Libft/ft_lst_stack_size.c
        Libft/ft_lst_stack_top.c
        Libft/ft_lst_stack_turn.c
        Libft/ft_lst_strjoin.c
        Libft/ft_lst_strjoin_counter_out.c
        Libft/ft_lst_strjoin_counter_out_cs.c
        Libft/ft_lst_strjoin_counter_out_free.c
        Libft/ft_lst_strjoin_counter_out_free_cs.c
        Libft/ft_lst_strjoin_cs.c
        Libft/ft_lst_strjoin_free.c
        Libft/ft_lst_strjoin_free_cs.c
        Libft/ft_lst_strjoin_sep.c
        Libft/ft_lst_strjoin_sep_counter_out.c
        Libft/ft_lst_strjoin_sep_counter_out_free.c
        Libft/ft_lst_strjoin_sep_free.c
        Libft/ft_lst_strlen.c
        Libft/ft_lst_strnew.c
        Libft/ft_lst_to_array.c
        Libft/ft_lst_to_array_free.c
        Libft/ft_lst_to_array_nullterm.c
        Libft/ft_lst_to_array_nullterm_free.c
        Libft/ft_lst_turn.c
        Libft/ft_lst_unit_transfer.c
        Libft/ft_lst_unit_transfer_with_malloc.c
        Libft/ft_lstadd.c
        Libft/ft_lstadd_to_end.c
        Libft/ft_lstdel.c
        Libft/ft_lstdel_complite.c
        Libft/ft_lstdelone.c
        Libft/ft_lstiter.c
        Libft/ft_lstmap.c
        Libft/ft_lstnew.c
        Libft/ft_lstnew_no_copy.c
        Libft/ft_lstsearch_content.c
        Libft/ft_lstsearch_cs.c
        Libft/ft_lstsearch_cs_del.c
        Libft/ft_lstsearch_cs_replace.c
        Libft/ft_lstsearch_index.c
        Libft/ft_lstsearch_str_content.c
        Libft/ft_math_long_double_normilize.c
        Libft/ft_math_longar_str_add.c
        Libft/ft_math_longar_str_add_free_1.c
        Libft/ft_math_longar_str_add_free_both.c
        Libft/ft_math_longar_str_comparison.c
        Libft/ft_math_longar_str_division.c
        Libft/ft_math_longar_str_exponent_mix.c
        Libft/ft_math_longar_str_exponent_mix_free.c
        Libft/ft_math_longar_str_multi.c
        Libft/ft_math_longar_str_multi_free_1.c
        Libft/ft_math_longar_str_multi_free_both.c
        Libft/ft_math_longar_str_remainder_of_division.c
        Libft/ft_math_longar_str_subtraction.c
        Libft/ft_math_module_int.c
        Libft/ft_math_numlen_long.c
        Libft/ft_math_numlen_long_double.c
        Libft/ft_math_root.c
        Libft/ft_math_rounding_down_double.c
        Libft/ft_math_rounding_down_float.c
        Libft/ft_math_rounding_down_l_double.c
        Libft/ft_maxmin.c
        Libft/ft_mem_reverse.c
        Libft/ft_memalloc.c
        Libft/ft_memccpy.c
        Libft/ft_memchr.c
        Libft/ft_memcmp.c
        Libft/ft_memcpy.c
        Libft/ft_memcpy_safe.c
        Libft/ft_memdel.c
        Libft/ft_memdup.c
        Libft/ft_memjoin.c
        Libft/ft_memjoin_free_1.c
        Libft/ft_memmove.c
        Libft/ft_memset.c
        Libft/ft_new_null_str.c
        Libft/ft_nuller_double_point.c
        Libft/ft_nuller_double_size_t.c
        Libft/ft_numch.c
        Libft/ft_open_file_readonly.c
        Libft/ft_print_two_dimensional_array.c
        Libft/ft_putchar.c
        Libft/ft_putchar_fd.c
        Libft/ft_putendl.c
        Libft/ft_putendl_fd.c
        Libft/ft_putnbr.c
        Libft/ft_putnbr_fd.c
        Libft/ft_putstr.c
        Libft/ft_putstr_fd.c
        Libft/ft_putstr_len.c
        Libft/ft_putstr_len_fd.c
        Libft/ft_range_str.c
        Libft/ft_sort_quick.c
        Libft/ft_str_disnuller_end.c
        Libft/ft_str_lower.c
        Libft/ft_str_reverse.c
        Libft/ft_str_upper.c
        Libft/ft_str_width.c
        Libft/ft_str_width_free.c
        Libft/ft_strcat.c
        Libft/ft_strchr.c
        Libft/ft_strclr.c
        Libft/ft_strcmp.c
        Libft/ft_strcmp_no_spaces.c
        Libft/ft_strcpy.c
        Libft/ft_strdel.c
        Libft/ft_strdup.c
        Libft/ft_strdup_free.c
        Libft/ft_strdup_n.c
        Libft/ft_strdup_n_free.c
        Libft/ft_strequ.c
        Libft/ft_striter.c
        Libft/ft_striteri.c
        Libft/ft_strjoin.c
        Libft/ft_strjoin_free_1.c
        Libft/ft_strjoin_free_2.c
        Libft/ft_strjoin_free_both.c
        Libft/ft_strlcat.c
        Libft/ft_strlen.c
        Libft/ft_strlen_safe.c
        Libft/ft_strmap.c
        Libft/ft_strmapi.c
        Libft/ft_strncat.c
        Libft/ft_strncmp.c
        Libft/ft_strncpy.c
        Libft/ft_strnequ.c
        Libft/ft_strnew.c
        Libft/ft_strnew_filler.c
        Libft/ft_strnew_not_bzero.c
        Libft/ft_strnstr.c
        Libft/ft_strrchr.c
        Libft/ft_strsplit.c
        Libft/ft_strsplit_spaces.c
        Libft/ft_strstr.c
        Libft/ft_strsub.c
        Libft/ft_strtrim.c
        Libft/ft_swap_byte.c
        Libft/ft_swap_n_bytes.c
        Libft/ft_this_all_files_is_same.c
        Libft/ft_this_all_files_is_same_free.c
        Libft/ft_this_files_is_same.c
        Libft/ft_tolower.c
        Libft/ft_toupper.c
        Libft/get_next_line.c
        srcs/check_first_line.c
        srcs/count_num.c
        srcs/create_graph.c
        srcs/create_help.c
        srcs/ft_check_comment.c
        srcs/ft_check_format_one.c
        srcs/ft_copy_name.c
        srcs/ft_exit_adjacency.c
        srcs/ft_exit_checking.c
        srcs/ft_make_adjacency.c
        srcs/ft_validate.c
        srcs/main.c
        srcs/put_first_adjacency.c
        srcs/arg.c
        srcs/print_adjacency.c
        srcs/ft_check_num.c
        srcs/ft_check_adjacency.c)
